Display the NARA logo as cropped from the right side on window sizes smaller than the main content area. This prevents unnecessary side scrolling at smaller window sizes (where the window would scroll only because of the logo) - but still allows side scrolling for main content area when needed.

--- a/app/assets/stylesheets/design/app.css.scss
+++ b/app/assets/stylesheets/design/app.css.scss
@@ -34,6 +34,22 @@
   }
 }
 
+// We don't want the browser to side scroll *only* for the background seal
+// so below a certain width we display it in a cropped form so that the browser
+// doesn't paint it outside of the viewport and then scroll for it.
+@media (max-width: 970px) {
+  .mdrnzr-svg body .nara-background-seal {
+    background-position: left;
+    background-size: 200% 200%;
+    width: 221px;
+  }
+
+  .mdrnzr-svg.mdrnzr-cssgradients body .nara-background-seal .nara-background-seal-fade {
+    width: 221px;
+  }
+}
+
+
 .mdrnzr-no-svg body .nara-background-seal {
   @include background_seal;
 
@@ -42,8 +58,20 @@
   width: 450px;
 }
 
+// See note above about side scrolling at smaller window sizes
+@media (max-width: 970px) {
+  .mdrnzr-no-svg body .nara-background-seal {
+    width: 221px;
+  }
+}
+
 #print-disclaimer { display: none; }
 
+
+// The NARA logo sits partially outside of the viewport except at larger window
+// widths. We don't want the window to scroll just for this logo so at sizes
+// above the main content area width, we're telling the browser to not scroll
+// for content painted outside of the viewport.
 @media (min-width: 970px) {
   body { overflow-x: hidden; }
 }
